--- a/all/themes/pixelgarage/less/pxlComponents/block-social.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-social.less
@@ -8,9 +8,9 @@
 @ss-sub-font: "Regular"; // supported sub-fonts are "Circle" and "Regular"
 @ss-sub-font-hover: "Circle";
 
-@pxl-share-color: @pxl-color-red;
+@pxl-share-color: @pxl-color-main;
 @pxl-share-align: left;
-@pxl-follow-color: @pxl-color-red;
+@pxl-follow-color: @pxl-color-main;
 
 @pxl-share-icon-size: 40px;
 
