--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -7,18 +7,18 @@
 
 //== Colors
 //
-@pxl-color-red: #ff0000;
-@pxl-color-yellow: #ffff00;
 @pxl-color-black: #000000;
+@pxl-color-magenta: #f40f8d;
+@pxl-color-blue: #06b5f4;
 
-@pxl-color-main: @pxl-color-red;
-@pxl-color-active: @pxl-color-black;
+@pxl-color-main: @pxl-color-magenta;
+@pxl-color-active: @pxl-color-blue;
 
 @pxl-color-border: #5f5e5e;
 @pxl-color-border-active: @pxl-color-main;
 
-@pxl-color-body-bg: @pxl-color-yellow;
-@pxl-color-box-bg: @pxl-color-red;
+@pxl-color-body-bg: #fff;
+@pxl-color-box-bg: @pxl-color-magenta;
 
 
 @gray-base:              #000;
@@ -41,7 +41,7 @@
 @text-color:            @pxl-color-black;
 @text-color-disabled:   @gray-lighter;
 @text-color-field:      @pxl-color-black;
-@text-color-placeholder: @pxl-color-red;
+@text-color-placeholder: @pxl-color-magenta;
 
 @title-letter-spacing: 0;
 @title-line-height: 1;
@@ -189,7 +189,7 @@
 //## Define the maximum width of `.container` for different screen sizes.
 
 // Small screen / tablet
-@container-tablet:             (720px + @grid-gutter-width);
+@container-tablet:             (700px + @grid-gutter-width);
 //** For `@screen-sm-min` and up.
 @container-sm:                 @container-tablet;
 
@@ -199,7 +199,7 @@
 @container-md:                 @container-desktop;
 
 // Large screen / wide desktop
-@container-large-desktop:      (1140px + @grid-gutter-width);
+@container-large-desktop:      (1170px + @grid-gutter-width);
 //** For `@screen-lg-min` and up.
 @container-lg:                 @container-large-desktop;
 
