--- a/all/themes/pixelgarage/less/pxlComponents/node-post.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-post.less
@@ -82,10 +82,10 @@
 .node.node-post {
   position: relative;
   margin: 0;
-  padding-bottom: 140%;
+  padding-bottom: 150%;
   width: 100%;
   height: 0;
-  overflow: hidden;
+  //overflow: hidden;
   background-color: white;
 
   div.row {
@@ -102,32 +102,90 @@
         }
       }
 
-      .field-name-field-your-name {
+      .logo-wrapper {
         position: absolute;
-        bottom: 3%;
-        right: @grid-gutter-width/2;
-        padding: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: auto;
+
+        img {
+          width: 100%;
+        }
+      }
+
+      .field-name-field-your-name,
+      .profession-age-wrapper {
+        position: absolute;
+        padding: 0 10px;
+        max-width: 80%;
+        height: auto;
+        line-height: 1.2;
 
         .field-item {
-          width: auto;
-          font-family: @pxl-text-font-light;
-          #pxl-mixins.font-size-responsive(14px, 12px);
+          overflow: hidden;
+          font-family: @pxl-text-font;
+          color: white;
           letter-spacing: 1px;
-          line-height: 1.1;
-          color: @text-color;
+          text-align: center;
           white-space: nowrap;
+          text-overflow: ellipsis;
 
           @media @mobile {
-            font-size: 4vw;
+            font-size: 4.5vw;
           }
           @media @tablet {
             font-size: 12px;
           }
           @media @normal {
-            font-size: 14px;
+            font-size: 12px;
           }
           @media @wide {
-            font-size: 16px;
+            font-size: 15px;
+          }
+        }
+
+      }
+
+      .field-name-field-your-name {
+        top: 43%;
+        left: -2%;
+        background-color: @pxl-color-blue;
+      }
+
+      .profession-age-wrapper {
+        top: 50%;
+        right: -2%;
+        background-color: @pxl-color-magenta;
+
+        .field-name-field-profession {
+          max-width: 80%;
+          display: inline-block;
+
+          .field-item {
+            white-space: nowrap;
+            line-height: 1;
+          }
+        }
+
+        .field-name-field-age {
+          display: inline-block;
+          white-space: nowrap;
+
+          .field-items {
+            display: inline-block;
+
+            .field-item {
+              line-height: 1;
+
+              &:before {
+                content: '[';
+              }
+              &:after {
+                content: ']';
+              }
+
+            }
           }
         }
       }
@@ -135,24 +193,24 @@
       .quote-wrapper {
         position: absolute;
         overflow: hidden;
-        top: 74%;
-        left: 5%;
-        width: 90%;
+        top: 72%;
+        right: 0;
+        width: 47%;
         height: auto;
         font-family: @pxl-text-font-bold;
-        #pxl-mixins.font-size-responsive(17px, 13px);
+        text-align: center;
 
         @media @mobile {
           font-size: 4.5vw;
         }
         @media @tablet {
-          font-size: 13px;
+          font-size: 12px;
         }
         @media @normal {
-          font-size: 17px;
+          font-size: 12px;
         }
         @media @wide {
-          font-size: 20px;
+          font-size: 15px;
         }
 
         .field-name-field-quote {
@@ -163,19 +221,12 @@
 
             .field-item {
               display: inline;
-              color: @text-color;
+              color: @pxl-color-magenta;
               line-height: 1.1;
               text-align: left;
               #pxl-mixins.hyphenate(auto);
             }
           }
-        }
-
-        .post-claim {
-          display: inline;
-          color: @pxl-color-main;
-          line-height: 1.1;
-          text-align: left;
         }
       }
     }
@@ -187,10 +238,11 @@
   &.view-mode-full {
     div.row {
       div.col-sm-12 {
-        .field-name-field-your-name {
+        .field-name-field-your-name,
+        .profession-age-wrapper {
           .field-item {
             @media @narrow {
-              font-size: 18px;
+              font-size: 20px;
             }
           }
         }
