--- a/all/themes/pixelgarage/less/pxlComponents/node-post.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-post.less
@@ -138,10 +138,10 @@
             font-size: 12px;
           }
           @media @normal {
-            font-size: 12px;
+            font-size: 16px;
           }
           @media @wide {
-            font-size: 15px;
+            font-size: 16px;
           }
         }
 
@@ -207,10 +207,10 @@
           font-size: 12px;
         }
         @media @normal {
-          font-size: 12px;
+          font-size: 16px;
         }
         @media @wide {
-          font-size: 15px;
+          font-size: 16px;
         }
 
         .field-name-field-quote {
@@ -224,7 +224,7 @@
               color: @pxl-color-magenta;
               line-height: 1.1;
               text-align: left;
-              #pxl-mixins.hyphenate(auto);
+              //#pxl-mixins.hyphenate(auto);
             }
           }
         }
