--- a/all/themes/pixelgarage/less/pxlComponents/view-post-grid.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-post-grid.less
@@ -205,11 +205,12 @@
 
       @media @tablet {
         .grid-sizer, .pe-item {
+          margin: 0 -2px 0 0;
           width: (33.3333333% - 2*@grid-gutter-dist/3);
         }
       }
 
-      @media @normal {
+      @media @wide {
         .grid-sizer, .pe-item {
           margin: 0 -2px 0 0;
           width: (25% - 3*@grid-gutter-dist/4);
