--- a/all/themes/pixelgarage/less/header.less
+++ b/all/themes/pixelgarage/less/header.less
@@ -47,7 +47,7 @@ header#navbar {
   margin: 0;
   border-bottom: none;
   background: white none;
-  #pxl-mixins.box-shadow(0 4px 3px -4px gray);
+  //#pxl-mixins.box-shadow(0 4px 3px -4px gray);
 
   .navbar-top-container > .container {
     position: relative;
@@ -198,7 +198,7 @@ header#navbar {
         bottom: 12px;
         right: @grid-gutter-width / 2;
         padding: 0;
-        width: 75%;
+        width: 60%;
 
         nav {
           text-align: right;
