--- a/all/themes/pixelgarage/less/pxlComponents/node-post.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-post.less
@@ -148,6 +148,7 @@
       }
 
       .name-age-wrapper {
+        padding-top: 3px;
         top: 52%;
         left: -2%;
         background-color: @pxl-color-blue;
